apps/dex/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-http-redirect
  namespace: dex
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
      sectionName: http
  hostnames:
    - dex.icaninto.space
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
